# tessdb-cmdline

./: .gitattributes  .gitignore  ISSUE.md  MANIFEST.in  TODO  justfile  pyproject.toml  setup.cfg  setup.py
scripts/: apply-sql  auto-apply-sql  cross-db  fast-apply-sql  mongo-db  tess-db  tessdb_pause  tessdb_resume  tessutils
scripts/ida/: tess_ida_bulk_dump  tess_ida_bulk_dump_all  tess_ida_bulk_dump_selective  tess_ida_pipeline  tessdb_index  tessdb_remote_backup  webdav_ida_rclone
scripts/reports/: tess_geolist.sh
scripts/tools/: auto-apply-sql  create-sql-indexes  delete-sql-indexes  fast-apply-sql  manual-repaired-location-fixes
src/tess/: instrument.py  location.py  tess.py
src/tessdb/cmdline/: __init__.py  constants.py  location.py  observer.py
src/tessdb/cmdline/utils/: __init__.py  parser.py
src/tessdb/reports/: __init__.py  geolist.py  ida.py  metadata.py  readings.py
src/tessdb/reports/ida/: ida.py
src/tessdb/templates/: IDA-template-4c.j2  sql-fix-absurd-zp.j2  sql-phot-new-locations.j2  sql-phot-upd-locations-metadata.j2  sql-phot-upd-locations.j2  sql-phot-upd-mac.j2  sql-phot-upd-readings-locations.j2
src/tessdb/tools/: __init__.py  adhoc.py  crossdb.py  dbutils.py  forms.py  idadb.py  location.py  mongodb.py  nominatim.py  tessdb.py  utils.py  zptess.py
src/tessutils/: __init__.py  __main__.py  crossdb.py  dbutils.py  forms.py  ida.py  idadb.py  location.py  mongo.py  mongodb.py  tessdb.py  utils.py  zptess.py
src/tessutils/templates/: sql-location-insert.j2  sql-phot-new-locations.j2  sql-phot-upd-locations-metadata.j2  sql-phot-upd-locations.j2  sql-phot-upd-mac.j2  sql-phot-upd-readings-locations.j2  sql-phot-update.j2
tess/: instrument.py  tess.py
tess_event/: tess_event.py
