[build-system]
requires = ["setuptools >= 45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tessdb-cmdline"
dynamic = ["version"]
description = "A package to collect measurements published by TESS instruments into a SQlite database"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Rafael González", email = "rafael08@ucm.es"},
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    'Programming Language :: SQL',
    'Development Status :: 4 - Beta',
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Natural Language :: Spanish',
]
dependencies = [
    'jinja2',
    'tabulate',
    'geopy',
    'timezonefinder',
    'requests',
    'validators',
    'python-decouple',
    'python-dateutil',
    'tabulate', 
    'pytz',
    'lica@git+https://github.com/guaix-ucm/lica#egg=main',
]

[project.optional-dependencies]
test = [
    "pytest>=6",
]

[project.urls]
Homepage = "https://github.com/astrorafael/tessdb-cmdline"
Repository = "https://github.com/astrorafael/tessdb-cmdline.git"

[project.scripts]
mongo-db = "tessdb.tools.mongodb:main"
tess-db = "tessdb.tools.tessdb:main"
location = "tessdb.tools.location:main"
zp-tess =  "tessdb.tools.zptess:main"
cross-db =  "tessdb.tools.crossdb:main"
tess-ida = "tessdb.reports.ida:main"


# pyproject.toml
# Autimatically generates a _version-py file from with Git information
# This file shold be placed in .gitignore
[tool.setuptools_scm]
write_to = "src/tessdb/_version.py"

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["src"]

[tool.setuptools]
script-files = [
    "scripts/tools/tessdb-pause", 
    "scripts/tools/tessdb-resume",
    "scripts/tools/auto-apply-sql",
    "scripts/tools/fast-apply-sql", 
    "scripts/tools/create-sql-indexes",
    "scripts/tools/delete-sql-indexes",
    "scripts/tools/manual-repaired-location-fixes",
    "scripts/reports/tess_bulk_dump.sh",
    "scripts/reports/tess_daily_summary.sh",
    "scripts/reports/tess_ida_bulk_dump.sh",
    "scripts/reports/tess_ida_bulk_dump_all.sh",
    "scripts/reports/tess_readings_unassigned.sh",
    "scripts/reports/tessdb_index.sh",

]

[tool.setuptools.package-data]
"tessdb.templates" = ["*.j2"]
