[project]
name = "tessdb-cmdline"
dynamic = ["version"]
description = "TESS datadabase report tools"
readme = "README.md"
requires-python = ">=3.9"
license-files = ["LICENSE"]
authors = [
    {name = "Rafael González", email = "rafael08@ucm.es"},
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    'Programming Language :: SQL',
    'Development Status :: 4 - Beta',
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Natural Language :: Spanish',
]
dependencies = [
    'tabulate',
    'lica',
]

[project.optional-dependencies]
test = [
    "pytest>=6",
]

[project.urls]
Homepage = "https://github.com/STARS4ALL/tessdb-cmdline"
Repository = "https://github.com/STARS4ALL/tessdb-cmdline.git"

[project.scripts]
tess-observer = "tessdb.cmdline.observer:main"


[build-system]
requires = ["setuptools >= 78.1", "wheel", "setuptools_scm[toml]>=8.2"]
build-backend = "setuptools.build_meta"

# pyproject.toml
# Autimatically generates a _version-py file from with Git information
# This file shold be placed in .gitignore
[tool.setuptools_scm]
write_to = "src/tessdb/cmdline/_version.py"

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["src"]

[tool.setuptools]
script-files = []


[tool.ruff]
line-length = 100
